--- a/css/about.css
+++ b/css/about.css
@@ -220,7 +220,7 @@ html {
   text-align: center;
   padding: 16px;
   gap: 7px;
-  background-image: url(/Module1--CapstoneProject/img/1025341.png);
+  background-image: url(../img/1025341.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -243,7 +243,7 @@ html {
 .mainHeader {
   font-weight: 800;
   font-size: 33px;
-  background-image: url(/Module1--CapstoneProject/img/water.jpeg);
+  background-image: url(../img/water.jpeg);
   background-size: contain;
   background-clip: var(--grey);
   -webkit-background-clip: text;
