--- a/css/style.css
+++ b/css/style.css
@@ -596,8 +596,9 @@ html {
     height: 260px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 20px;
   }
 
   .partnerTitle {
